--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-signin-client_id" content="1234567890-abcdefghijklmnopqrstuvwxyz123456.apps.googleusercontent.com">
     <title>Banking System with Finance Management Dashboard</title>
   </head>
   <body>
